yiltc-v0.2-backup/testsuite/negative/arrow_return_type.yilt
// Negative: arrow syntax for function return type is rejected.
// Spec rule: write `fn foo() int`, NOT `fn foo() -> int`.
fn add(a int, b int) -> int
    return a + b

fn main()
    print(add(1, 2))
